--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,13 @@ body {
 	margin: 0;
 	position: relative;
 }
-
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"]{
+-webkit-appearance: none;
+opacity:1;
+}
 ::-webkit-input-placeholder {
 	color: #dcdcdc;
 }
@@ -44,141 +50,82 @@ body {
 
 
 /*-- loader  --*/
-
-#owlreporter-preloader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1000
+.preloader.fade {
+    opacitgy: 0; 
 }
-
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+	background:#312a2b;
+	z-index:999;
+}
 #loader {
-	display: block;
-	position: relative;
-	left: 50%;
-	top: 50%;
-	width: 150px;
-	height: 150px;
-	margin: -75px 0 0 -75px;
-	border-radius: 50%;
-	border: 3px solid transparent;
-	border-top-color: #ff0785;
-	-webkit-animation: spin 2s linear infinite;
-	animation: spin 2s linear infinite;
-	z-index: 1001
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #ff3f22;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
 }
-
 #loader:before {
-	content: "";
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	right: 5px;
-	bottom: 5px;
-	border-radius: 50%;
-	border: 3px solid transparent;
-	border-top-color: #ff5200;
-	-webkit-animation: spin 3s linear infinite;
-	animation: spin 3s linear infinite
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #ff3b00;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
 }
-
 #loader:after {
-	content: "";
-	position: absolute;
-	top: 15px;
-	left: 15px;
-	right: 15px;
-	bottom: 15px;
-	border-radius: 50%;
-	border: 3px solid transparent;
-	border-top-color: #f9c922;
-	-webkit-animation: spin 1.5s linear infinite;
-	animation: spin 1.5s linear infinite
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #FF00FF;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
 }
-
 @-webkit-keyframes spin {
-	0% {
-		-webkit-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		transform: rotate(0deg)
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		transform: rotate(360deg)
-	}
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-
 @keyframes spin {
-	0% {
-		-webkit-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		transform: rotate(0deg)
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		transform: rotate(360deg)
-	}
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-
-#owlreporter-preloader .loader-section {
-	position: fixed;
-	top: 0;
-	width: 51%;
-	height: 100%;
-	background: #251e20;
-	z-index: 1000;
-	-webkit-transform: translateX(0);
-	-ms-transform: translateX(0);
-	transform: translateX(0)
-}
-
-#owlreporter-preloader .loader-section.section-left {
-	left: 0
-}
-
-#owlreporter-preloader .loader-section.section-right {
-	right: 0
-}
-
-.loaded #owlreporter-preloader .loader-section.section-left {
-	-webkit-transform: translateX(-100%);
-	-ms-transform: translateX(-100%);
-	transform: translateX(-100%);
-	-webkit-transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-	transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000)
-}
-
-.loaded #owlreporter-preloader .loader-section.section-right {
-	-webkit-transform: translateX(100%);
-	-ms-transform: translateX(100%);
-	transform: translateX(100%);
-	-webkit-transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-	transition: all .7s .3s cubic-bezier(0.645, 0.045, 0.355, 1.000)
-}
-
-.loaded #loader {
-	opacity: 0;
-	-webkit-transition: all .3s ease-out;
-	transition: all .3s ease-out
-}
-
-.loaded #owlreporter-preloader {
-	visibility: hidden;
-	-webkit-transform: translateY(-100%);
-	-ms-transform: translateY(-100%);
-	transform: translateY(-100%);
-	-webkit-transition: all .3s 1s ease-out;
-	transition: all .3s 1s ease-out
-}
-
-.no-js #owlreporter-preloader {
-	display: none
-}
-
 
 /*-- loader  --*/
 
